# serde_libconfig

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci_lint.yml  lint.yml  test.yml
src/: de.rs  error.rs  lib.rs  ser.rs
