[package]
name = "serde_libconfig"
version = "0.0.1"
edition = "2021"
authors = ["Bastian Schmidt <basti@schmidt-electronics.de>"]
categories = ["encoding", "parser-implementations", "no-std"]
description = "A libconfig serialization file format"
keywords = ["libconfig", "serde", "serialization"]
license = "Apache-2.0"
repository = "https://github.com/bastian-src/serde_libconfig"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
]

[dependencies]
anyhow = "1.0.82"
derive = "1.0.0"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
